Style fix: CSS breaking while viewing desktop mode on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -19,17 +19,15 @@
 
 .navbar {
   display:flex;
-/*   position:fixed; */
   align-items: center;
+  justify-content: space-between;
   gap:30px;
+  padding-right: 3.93rem;
   border-bottom: 1px solid #464646;
-  z-index:1000;
-/*   background:green; */
 }
 
 .nav-items {
   color:white;
-/*   font-family: "inter"; */
   text-transform: uppercase;
   text-decoration: none;
   font-family: 'Clash Display', sans-serif;  
@@ -40,7 +38,7 @@
 }
 
 .nav-items3 {
-  border-right: 1px solid #464646;
+  padding-right: 0rem;
 }
 
 .error-link {
@@ -48,7 +46,7 @@
 }
 
 body {
-  width:100vw;
+/*   width:100vw; */
   background:black;
   color:white;
 }
@@ -58,13 +56,6 @@ body {
   font-weight:600;
   padding:3rem 8rem;
   font-size: 40px;
-}
-
-.altschool {
-  font-family: 'Clash Display', sans-serif;  
-  font-weight:400;
-  padding:3rem 8rem;
-  font-size: 30px;
 }
 
 .Kegilka {
